# Rwal

./: Cargo.toml  README.md  theme_loader.rs
contrib/: config-map.example.toml  theme-map.example.toml
default_colorschemes/: catppuccin_late.json  catppuccin_mocha.json  shades_of_purple.json
src/: cli.rs  color_extractor.rs  config_writer.rs  error.rs  image_loader.rs  main.rs  palette_generator.rs  paths.rs  wallpaper.rs
src/backends/: kmeans.rs  median_cut.rs  mod.rs
src/cache/: scheme.rs
src/colors/: adjust.rs  extractor.rs  mod.rs  palette.rs  semantic.rs  types.rs
src/export/: colors_json.rs  generate.rs  mod.rs  sequences.rs  templates.rs  theme.rs
src/image/: loader.rs
src/wallpaper/: feh.rs  hyprpaper.rs  macos.rs  mod.rs  nitrogen.rs  sway.rs  swww.rs  windows.rs  xwallpaper.rs
templates/: adding_bundled_templates.md  colors-kitty.conf  colors-polybar.ini  colors-rofi-dark.rasi  colors-rofi-light.rasi  colors-waybar.css  colors.Xresources  colors.css  colors.js  colors.scss  colors.xml  colors.yml  colors_polybar.ini  colors_tty.sh
themes/: dracula.json  tokyo_night.json
