[package]
name = "rwal"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
dirs = "5.0"
image = "0.24"
lazy_static = "1.4"
log = "0.4"
palette = { version = "0.7", features = ["serde"] }
rand = "0.8"
rayon = "1.7" # For Parrallelism
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
toml = "0.7"
filetime = "0.2.27"
sha1 = "0.10.6"
rust-embed = { version = "8.0", features = ["include-exclude"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3
